praxis/kubernetes/apps/neptune/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neptune
  namespace: neptune
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neptune
  template:
    metadata:
      labels:
        app: neptune
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
