praxis/kubernetes/apps/neptune/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neptune
  namespace: neptune
spec:
  selector:
    app: neptune
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
